--- a/history.html
+++ b/history.html
@@ -8,6 +8,10 @@
     <link href="style.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-
+    <nav>
+        <button><a href="index.html">Home</a></button>
+        <button><a href="members.html">Members</a></button>
+        <button><a href="music.html">Music</a></button>
+    </nav>
 </body>
 </html>
