--- a/music.html
+++ b/music.html
@@ -8,6 +8,10 @@
     <link href="style.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-
+    <nav>
+        <button><a href="index.html">Home</a></button>
+        <button><a href="history.html">History</a></button>
+        <button><a href="members.html">Members</a></button>
+    </nav>
 </body>
 </html>
