--- a/music.html
+++ b/music.html
@@ -6,13 +6,16 @@
     <title>FED Assignment 1</title>
     <link href="css\normalize.css" rel="stylesheet" type="text/css"/>
     <link href="css\style.css" rel="stylesheet" type="text/css"/>
+    <link href="https://fonts.googleapis.com/css2?family=Arima:wght@100..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Oswald:wght@200..700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <nav>
-        <button class="navigation"><a href="index.html">Home</a></button>
-        <button class="navigation"><a href="history.html">History</a></button>
-        <button class="navigation"><a href="members.html">Members</a></button>
-    </nav>
+    <header>
+        <nav>
+            <button class="navigation"><a href="index.html">Home</a></button>
+            <button class="navigation"><a href="history.html">History</a></button>
+            <button class="navigation"><a href="members.html">Members</a></button>
+        </nav>
+    </header>
 
     <h1 class="heading">Commissioned Songs:</h1>
     <section class="song-list">
@@ -24,7 +27,7 @@
                 <p>Name: Idol Shin'eitai</p>
                 <p>Vocals: Hatsune Miku, Hanasato Minori, Kiritani Haruka, Momoi Airi, Hinomori Shizuku</p>
                 <p>Producer(s): Mitchie M</p>
-                <p>Release date: 09/30/2020</p>
+                <p>Release date: 30/09/2020</p>
                 <p>Album: 1st single</p>
                 <p>Music video(s):
                 <a href="https://youtu.be/3yQWZcYXcgg?si=AUUPlzxF1jn-Bjt7">3DMV</a>
@@ -40,7 +43,7 @@
                 <p>Name: More! Jump! More!</p>
                 <p>Vocals: Hatsune Miku, Hanasato Minori, Kiritani Haruka, Momoi Airi, Hinomori Shizuku</p>
                 <p>Producer(s): NayutalieN</p>
-                <p>Release date: 11/19/2020</p>
+                <p>Release date: 19/11/2020</p>
                 <p>Album: 1st single</p>
                 <p>Music video(s):
                 <a href="https://youtu.be/SKbutknpQ_I?si=w-Id-h8Il-jxuZc6">2DMV</a>
@@ -56,7 +59,7 @@
                 <p>Name: Color of Drops</p>
                 <p>Vocals: Megurine Luka, Hanasato Minori, Kiritani Haruka, Momoi Airi, Hinomori Shizuku</p>
                 <p>Producer(s): 40mP</p>
-                <p>Release date: 01/29/2021</p>
+                <p>Release date: 29/01/2021</p>
                 <p>Album: 2nd single</p>
                 <p>Music video(s):
                 <a href="https://youtu.be/vU-tfn7yyrQ?si=P_9k2_XoMTMN24Yt">3DMV</a>
@@ -72,7 +75,7 @@
                 <p>Name: Tenshi no Clover</p>
                 <p>Vocals: Kagamine Rin, Hanasato Minori, Kiritani Haruka, Momoi Airi, Hinomori Shizuku</p>
                 <p>Producer(s): DIVELA</p>
-                <p>Release date: 03/30/2021</p>
+                <p>Release date: 30/03/2021</p>
                 <p>Album: 2nd single</p>
                 <p>Music video(s):
                 <a href="https://youtu.be/WxXf9iRNwYM?si=Ov0kH7b_omzK7ZfO">2DMV</a>
@@ -89,7 +92,7 @@
                 <p>Name: Ai no Material</p>
                 <p>Vocals: MEIKO, Hanasato Minori, Kiritani Haruka, Momoi Airi, Hinomori Shizuku</p>
                 <p>Producer(s): Junky</p>
-                <p>Release date: 05/21/2021</p>
+                <p>Release date: 21/05/2021</p>
                 <p>Album: 3rd single</p>
                 <p>Music video(s):
                 <a href="https://youtu.be/miLfbcfdqus?si=DVJGydgSQcJZUB3H">2DMV</a>
@@ -105,7 +108,7 @@
                 <p>Name: Ice Drop</p>
                 <p>Vocals: Kagamine Len, Hanasato Minori, Kiritani Haruka, Momoi Airi, Hinomori Shizuku</p>
                 <p>Producer(s): aqu3ra</p>
-                <p>Release date: 08/18/2021</p>
+                <p>Release date: 18/08/2021</p>
                 <p>Album: 3rd single</p>
                 <p>Music video(s):
                 <a href="https://youtu.be/3_HXYLEP7aU?si=nB6uo1TBNO7yn9__">3DMV</a>
@@ -121,7 +124,7 @@
                 <p>Name: Worldwide Wander</p>
                 <p>Vocals: KAITO, Hanasato Minori, Kiritani Haruka, Momoi Airi, Hinomori Shizuku</p>
                 <p>Producer(s): TOKOTOKO</p>
-                <p>Release date: 12/10/2021</p>
+                <p>Release date: 10/12/2021</p>
                 <p>Album: 4th single</p>
                 <p>Music video(s):
                 <a href="https://youtu.be/aO_ZCaoojh4?si=VfEuGqtEf6B0o74-">2DMV</a>
@@ -137,7 +140,7 @@
                 <p>Name: Metamo Re:born</p>
                 <p>Vocals: Kagamine Rin, Hanasato Minori, Kiritani Haruka, Momoi Airi, Hinomori Shizuku</p>
                 <p>Producer(s): emon(Tes.)</p>
-                <p>Release date: 03/11/2022</p>
+                <p>Release date: 11/03/2022</p>
                 <p>Album: 4th single</p>
                 <p>Music video(s):
                 <a href="https://youtu.be/0BHY0Gs0ZZM?si=fp2cxmqZy2A9JDlB">2DMV</a>
@@ -153,7 +156,7 @@
                 <p>Name: IF</p>
                 <p>Vocals: Hatsune Miku, Hanasato Minori, Kiritani Haruka, Momoi Airi, Hinomori Shizuku</p>
                 <p>Producer(s): YurryCanon, Tsukuyomi</p>
-                <p>Release date: 05/08/2022</p>
+                <p>Release date: 08/05/2022</p>
                 <p>Album: 5th single</p>
                 <p>Music video(s):
                 <a href="https://youtu.be/egAHniCboNQ?si=2kcf7ER4l5jCyvE3">2DMV</a>
@@ -170,7 +173,7 @@
                 <p>Name: Parasol Cider</p>
                 <p>Vocals: Megurine Luka, Hanasato Minori, Kiritani Haruka, Momoi Airi, Hinomori Shizuku</p>
                 <p>Producer(s): Iwami Takashi, Nanahoshi Kangengakudan</p>
-                <p>Release date: 08/10/2022</p>
+                <p>Release date: 10/08/2022</p>
                 <p>Album: 5th single</p>
                 <p>Music video(s):
                 <a href="https://youtu.be/KJI_3HaLtmc?si=JIqAnLv9JPlvy8sv">2DMV</a>
@@ -186,7 +189,7 @@
                 <p>Name: DREAM PLACE</p>
                 <p>Vocals: MEIKO, Hanasato Minori, Kiritani Haruka, Momoi Airi, Hinomori Shizuku</p>
                 <p>Producer(s): EasyPop</p>
-                <p>Release date: 10/19/2022</p>
+                <p>Release date: 19/10/2022</p>
                 <p>Album: 6th single</p>
                 <p>Music video(s):
                 <a href="https://youtu.be/N-6bJ-qOuQA?si=CCXoeHIDADv7Em8-">3DMV</a>
@@ -202,7 +205,7 @@
                 <p>Name: Float Planner</p>
                 <p>Vocals: Kagamine Rin, Hanasato Minori, Kiritani Haruka, Momoi Airi, Hinomori Shizuku</p>
                 <p>Producer(s): Heavenz</p>
-                <p>Release date: 11/30/2022</p>
+                <p>Release date: 30/11/2022</p>
                 <p>Album: 6th single</p>
                 <p>Music video(s):
                 <a href="https://youtu.be/Brap_tO3Jj0?si=yERU1AZ2kmcVqSN2">2DMV</a>
@@ -218,7 +221,7 @@
                 <p>Name: Watashi wa, Watashitachi wa</p>
                 <p>Vocals: Kagamine Len, Hanasato Minori, Kiritani Haruka, Momoi Airi, Hinomori Shizuku</p>
                 <p>Producer(s): Guiano</p>
-                <p>Release date: 02/17/2023</p>
+                <p>Release date: 17/02/2023</p>
                 <p>Album: 7th single</p>
                 <p>Music video(s):
                 <a href="https://youtu.be/dW8TIOrjDfE?si=LB0no50G9_1UqLLP">3DMV</a>
@@ -234,7 +237,7 @@
                 <p>Name: Momoiro no Kagi</p>
                 <p>Vocals: Megurine Luka, Hanasato Minori, Kiritani Haruka, Momoi Airi, Hinomori Shizuku</p>
                 <p>Producer(s): iyowa</p>
-                <p>Release date: 04/28/2023</p>
+                <p>Release date: 28/04/2023</p>
                 <p>Album: 7th single</p>
                 <p>Music video(s):
                 <a href="https://youtu.be/LqPYSFgWG3g?si=ruo2ddClDcyb6XEI">3DMV</a>
@@ -250,7 +253,7 @@
                 <p>Name: Teammate</p>
                 <p>Vocals: Kagamine Len, Hanasato Minori, Kiritani Haruka, Momoi Airi, Hinomori Shizuku</p>
                 <p>Producer(s): HoneyWorks</p>
-                <p>Release date: 06/20/2023</p>
+                <p>Release date: 20/06/2023</p>
                 <p>Album: 8th single</p>
                 <p>Music video(s):
                 <a href="https://youtu.be/dXumRYQzs2s?si=x4yztHohSY9okvCK">2DMV</a>
@@ -266,7 +269,7 @@
                 <p>Name: Warera Stain Busters!</p>
                 <p>Vocals: Hatsune Miku, Kagamine Rin, Hanasato Minori, Kiritani Haruka, Momoi Airi, Hinomori Shizuku</p>
                 <p>Producer(s): Mashima Yulo</p>
-                <p>Release date: 08/01/2023</p>
+                <p>Release date: 01/08/2023</p>
                 <p>Collaboration: Sunstar Ora²</p>
                 <p>Music video(s):
                 <a href="https://youtu.be/Icq8vBZivxc?si=dAT8nmA0HC0la7Kn">2DMV</a>
@@ -282,7 +285,7 @@
                 <p>Name: Hug</p>
                 <p>Vocals: Kagamine Len, Hanasato Minori, Kiritani Haruka, Momoi Airi, Hinomori Shizuku</p>
                 <p>Producer(s): MIMI</p>
-                <p>Release date: 10/31/2023</p>
+                <p>Release date: 31/10/2023</p>
                 <p>Album: 8th single</p>
                 <p>Music video(s):
                 <a href="https://youtu.be/h1QTkwJnX0E?si=rz4GbED_Zv_rYxth">2DMV</a>
@@ -298,7 +301,7 @@
                 <p>Name: MOTTO!!!</p>
                 <p>Vocals: Hatsune Miku, Hanasato Minori, Kiritani Haruka, Momoi Airi, Hinomori Shizuku</p>
                 <p>Producer(s): Junky</p>
-                <p>Release date: 01/15/2024</p>
+                <p>Release date: 15/01/2024</p>
                 <p>Album: 9th single</p>
                 <p>Music video(s):
                 <a href="https://youtu.be/upn_CnVPGAA?si=xhbU8ITdJMDZ2eEh">2DMV</a>
@@ -315,7 +318,7 @@
                 <p>Name: JUMPIN’ OVER !</p>
                 <p>Vocals: Hatsune Miku, Hanasato Minori, Kiritani Haruka, Momoi Airi, Hinomori Shizuku</p>
                 <p>Producer(s): r-906</p>
-                <p>Release date: 02/27/2024</p>
+                <p>Release date: 27/02/2024</p>
                 <p>Album: 9th single</p>
                 <p>Music video(s):
                 <a href="https://youtu.be/F1v97Y6z0o0?si=FpaK51rBXMQMet1F">2DMV</a>
@@ -332,7 +335,7 @@
                 <p>Name: Supernova</p>
                 <p>Vocals: KAITO, Hanasato Minori, Kiritani Haruka, Momoi Airi, Hinomori Shizuku</p>
                 <p>Producer(s): Yunosuke, haruno</p>
-                <p>Release date: 06/18/2024</p>
+                <p>Release date: 18/06/2024</p>
                 <p>Album: 10th single</p>
                 <p>Music video(s):
                 <a href="https://youtu.be/2DGf-KlKXGA?si=R6MUoufDCdLK4OoE">2DMV</a>
@@ -349,7 +352,7 @@
                 <p>Name: Killer</p>
                 <p>Vocals: Kagamine Rin, Hanasato Minori, Kiritani Haruka, Momoi Airi, Hinomori Shizuku</p>
                 <p>Producer(s): Natsushiro Takaaki, Heavenz</p>
-                <p>Release date: 08/07/2024</p>
+                <p>Release date: 07/08/2024</p>
                 <p>Album: 10th single</p>
                 <p>Music video(s):
                 <a href="https://youtu.be/BSi88nRijoA?si=7rtBFdMBZu0yrh11">2DMV</a>
