Updated navigation and color coded song names in music.html

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <header>
         <img src="images/Moremorejumplogo.webp" alt="More More Jump logo" class="logo">
         <nav>
+            <button class="navigation"><a href="index.html">Home</a></button>
             <button class="navigation"><a href="history.html">History</a></button>
             <button class="navigation"><a href="members.html">Members</a></button>
             <button class="navigation"><a href="music.html">Music</a></button>
