--- a/music.html
+++ b/music.html
@@ -14,6 +14,7 @@
             <button class="navigation"><a href="index.html">Home</a></button>
             <button class="navigation"><a href="history.html">History</a></button>
             <button class="navigation"><a href="members.html">Members</a></button>
+            <button class="navigation"><a href="music.html">Music</a></button>
         </nav>
     </header>
 
@@ -40,7 +41,7 @@
 				<img src="images/More_More_Game_Cover.webp">
             </div>
             <div class="flex-song-info">
-                <p>Name: More! Jump! More!</p>
+                <p class="pink">Name: More! Jump! More!</p>
                 <p>Vocals: Hatsune Miku, Hanasato Minori, Kiritani Haruka, Momoi Airi, Hinomori Shizuku</p>
                 <p>Producer(s): NayutalieN</p>
                 <p>Release date: 19/11/2020</p>
@@ -56,7 +57,7 @@
 				<img src="images/Color_of_Drops_Game_Cover.webp">
             </div>
             <div class="flex-song-info">
-                <p>Name: Color of Drops</p>
+                <p class="green">Name: Color of Drops</p>
                 <p>Vocals: Megurine Luka, Hanasato Minori, Kiritani Haruka, Momoi Airi, Hinomori Shizuku</p>
                 <p>Producer(s): 40mP</p>
                 <p>Release date: 29/01/2021</p>
@@ -72,7 +73,7 @@
 				<img src="images/Tenshi_no_Clover_Game_Cover.webp">
             </div>
             <div class="flex-song-info">
-                <p>Name: Tenshi no Clover</p>
+                <p class="orange">Name: Tenshi no Clover</p>
                 <p>Vocals: Kagamine Rin, Hanasato Minori, Kiritani Haruka, Momoi Airi, Hinomori Shizuku</p>
                 <p>Producer(s): DIVELA</p>
                 <p>Release date: 30/03/2021</p>
@@ -89,7 +90,7 @@
 				<img src="images/Ai_no_Material_Game_Cover.webp">
             </div>
             <div class="flex-song-info">
-                <p>Name: Ai no Material</p>
+                <p class="blue">Name: Ai no Material</p>
                 <p>Vocals: MEIKO, Hanasato Minori, Kiritani Haruka, Momoi Airi, Hinomori Shizuku</p>
                 <p>Producer(s): Junky</p>
                 <p>Release date: 21/05/2021</p>
@@ -105,7 +106,7 @@
 				<img src="images/Ice_Drop_Game_Cover.webp">
             </div>
             <div class="flex-song-info">
-                <p>Name: Ice Drop</p>
+                <p class="pink">Name: Ice Drop</p>
                 <p>Vocals: Kagamine Len, Hanasato Minori, Kiritani Haruka, Momoi Airi, Hinomori Shizuku</p>
                 <p>Producer(s): aqu3ra</p>
                 <p>Release date: 18/08/2021</p>
@@ -121,7 +122,7 @@
 				<img src="images/Worldwide_Wander_Game_Cover.webp">
             </div>
             <div class="flex-song-info">
-                <p>Name: Worldwide Wander</p>
+                <p class="orange">Name: Worldwide Wander</p>
                 <p>Vocals: KAITO, Hanasato Minori, Kiritani Haruka, Momoi Airi, Hinomori Shizuku</p>
                 <p>Producer(s): TOKOTOKO</p>
                 <p>Release date: 10/12/2021</p>
@@ -137,7 +138,7 @@
 				<img src="images/Metamo_Reborn_Game_Cover.webp">
             </div>
             <div class="flex-song-info">
-                <p>Name: Metamo Re:born</p>
+                <p class="green">Name: Metamo Re:born</p>
                 <p>Vocals: Kagamine Rin, Hanasato Minori, Kiritani Haruka, Momoi Airi, Hinomori Shizuku</p>
                 <p>Producer(s): emon(Tes.)</p>
                 <p>Release date: 11/03/2022</p>
@@ -153,7 +154,7 @@
 				<img src="images/IF_Game_Cover.webp">
             </div>
             <div class="flex-song-info">
-                <p>Name: IF</p>
+                <p class="blue">Name: IF</p>
                 <p>Vocals: Hatsune Miku, Hanasato Minori, Kiritani Haruka, Momoi Airi, Hinomori Shizuku</p>
                 <p>Producer(s): YurryCanon, Tsukuyomi</p>
                 <p>Release date: 08/05/2022</p>
@@ -170,7 +171,7 @@
 				<img src="images/Parasol_Cider_Game_Cover.webp">
             </div>
             <div class="flex-song-info">
-                <p>Name: Parasol Cider</p>
+                <p class="pink">Name: Parasol Cider</p>
                 <p>Vocals: Megurine Luka, Hanasato Minori, Kiritani Haruka, Momoi Airi, Hinomori Shizuku</p>
                 <p>Producer(s): Iwami Takashi, Nanahoshi Kangengakudan</p>
                 <p>Release date: 10/08/2022</p>
@@ -186,7 +187,7 @@
 				<img src="images/DREAM_PLACE_Game_Cover.webp">
             </div>
             <div class="flex-song-info">
-                <p>Name: DREAM PLACE</p>
+                <p class="orange">Name: DREAM PLACE</p>
                 <p>Vocals: MEIKO, Hanasato Minori, Kiritani Haruka, Momoi Airi, Hinomori Shizuku</p>
                 <p>Producer(s): EasyPop</p>
                 <p>Release date: 19/10/2022</p>
@@ -202,7 +203,7 @@
 				<img src="images/Float_Planner_Game_Cover.webp">
             </div>
             <div class="flex-song-info">
-                <p>Name: Float Planner</p>
+                <p class="blue">Name: Float Planner</p>
                 <p>Vocals: Kagamine Rin, Hanasato Minori, Kiritani Haruka, Momoi Airi, Hinomori Shizuku</p>
                 <p>Producer(s): Heavenz</p>
                 <p>Release date: 30/11/2022</p>
@@ -218,7 +219,7 @@
 				<img src="images/Watashi_wa_Watashitachi_wa_Game_Cover.webp">
             </div>
             <div class="flex-song-info">
-                <p>Name: Watashi wa, Watashitachi wa</p>
+                <p class="green">Name: Watashi wa, Watashitachi wa</p>
                 <p>Vocals: Kagamine Len, Hanasato Minori, Kiritani Haruka, Momoi Airi, Hinomori Shizuku</p>
                 <p>Producer(s): Guiano</p>
                 <p>Release date: 17/02/2023</p>
@@ -234,7 +235,7 @@
 				<img src="images/Momoiro_no_Kagi_Game_Cover.webp">
             </div>
             <div class="flex-song-info">
-                <p>Name: Momoiro no Kagi</p>
+                <p class="pink">Name: Momoiro no Kagi</p>
                 <p>Vocals: Megurine Luka, Hanasato Minori, Kiritani Haruka, Momoi Airi, Hinomori Shizuku</p>
                 <p>Producer(s): iyowa</p>
                 <p>Release date: 28/04/2023</p>
@@ -250,7 +251,7 @@
 				<img src="images/Teammate_Game_Cover.webp">
             </div>
             <div class="flex-song-info">
-                <p>Name: Teammate</p>
+                <p class="orange">Name: Teammate</p>
                 <p>Vocals: Kagamine Len, Hanasato Minori, Kiritani Haruka, Momoi Airi, Hinomori Shizuku</p>
                 <p>Producer(s): HoneyWorks</p>
                 <p>Release date: 20/06/2023</p>
@@ -282,7 +283,7 @@
 				<img src="images/Hug_Game_Cover.webp">
             </div>
             <div class="flex-song-info">
-                <p>Name: Hug</p>
+                <p class="green">Name: Hug</p>
                 <p>Vocals: Kagamine Len, Hanasato Minori, Kiritani Haruka, Momoi Airi, Hinomori Shizuku</p>
                 <p>Producer(s): MIMI</p>
                 <p>Release date: 31/10/2023</p>
@@ -315,7 +316,7 @@
 				<img src="images/JUMPIN_Game_Cover.webp">
             </div>
             <div class="flex-song-info">
-                <p>Name: JUMPIN’ OVER !</p>
+                <p class="orange">Name: JUMPIN’ OVER !</p>
                 <p>Vocals: Hatsune Miku, Hanasato Minori, Kiritani Haruka, Momoi Airi, Hinomori Shizuku</p>
                 <p>Producer(s): r-906</p>
                 <p>Release date: 27/02/2024</p>
@@ -332,7 +333,7 @@
 				<img src="images/Supernova_Game_Cover.webp">
             </div>
             <div class="flex-song-info">
-                <p>Name: Supernova</p>
+                <p class="blue">Name: Supernova</p>
                 <p>Vocals: KAITO, Hanasato Minori, Kiritani Haruka, Momoi Airi, Hinomori Shizuku</p>
                 <p>Producer(s): Yunosuke, haruno</p>
                 <p>Release date: 18/06/2024</p>
@@ -349,7 +350,7 @@
 				<img src="images/Killer_Game_Cover.webp">
             </div>
             <div class="flex-song-info">
-                <p>Name: Killer</p>
+                <p class="pink">Name: Killer</p>
                 <p>Vocals: Kagamine Rin, Hanasato Minori, Kiritani Haruka, Momoi Airi, Hinomori Shizuku</p>
                 <p>Producer(s): Natsushiro Takaaki, Heavenz</p>
                 <p>Release date: 07/08/2024</p>
@@ -361,6 +362,7 @@
             </div>
         </div>
     </section>
+    <br>
     <footer>
         <a href="https://projectsekai.fandom.com/wiki/Category:MORE_MORE_JUMP!_Songs#Commissioned_Songs">Find out more</a>
     </footer>
