Added information about MMJ's history

--- a/history.html
+++ b/history.html
@@ -4,14 +4,99 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <title>FED Assignment 1</title>
-    <link href="normalize.css" rel="stylesheet" type="text/css"/>
-    <link href="style.css" rel="stylesheet" type="text/css"/>
+    <link href="css\normalize.css" rel="stylesheet" type="text/css"/>
+    <link href="css\style.css" rel="stylesheet" type="text/css"/>
+    <link href="https://fonts.googleapis.com/css2?family=Arima:wght@100..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Oswald:wght@200..700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <nav>
-        <button><a href="index.html">Home</a></button>
-        <button><a href="members.html">Members</a></button>
-        <button><a href="music.html">Music</a></button>
-    </nav>
+    <header>
+        <nav>
+            <button class="navigation"><a href="index.html">Home</a></button>
+            <button class="navigation"><a href="history.html">History</a></button>
+            <button class="navigation"><a href="members.html">Members</a></button>
+            <button class="navigation"><a href="music.html">Music</a></button>
+        </nav>
+    </header>
+
+    <section>
+        <article>
+            <h1 class="heading">History:</h1>
+            <p class = info>
+                Hanasato Minori has dreamed of becoming an idol since seeing Kiritani Haruka on TV as a child. Haruka inspired and gave Minori 
+                hope to keep a positive attitude of “Tomorrow will always be a better day” despite Minori’s bad luck. She has auditioned to be an idol 
+                for 50 times but to no avail. However one day, Minori was told about the news of Haruka’s group, ASRUN, disbanding and Haruka retiring from idol hood. 
+                Without having time to process the information, she noticed Haruka in the hallways of her school, Miyamasuzaka Girls Academy, due to the commotion of 
+                people gathering to see Haruka too. It turns out that Haruka returned, after enrolling in junior high school but did not attend classes due to idol work, 
+                to be a regular student and continued her education in the general education course instead of credit-based course. Despite the girls being in different classes, 
+                they eventually managed to become friends when Haruka was looking for a quiet space to read, which was the rooftops, which is also the place Minori practise 
+                dancing to become an idol. As luck would have it, Momoi Airi, an ex-idol whose dreams of being the traditional idol got crushed by the idol industry that 
+                forced her to be a tv variety shows for entertainment instead, and Hinomori Shizuku, soon to be ex-idol due to her group making her feel unwelcomed and unworthy 
+                to be an idol, were also at the rooftops, having a confrontation. <br><br>
+                Despite the rocky start of Airi and Minori’s relationship, with the help of Shizuku, Airi and Shizuku agreed to become Minori’s trainer to prepare her for her next audition. 
+                During practice, the group discovers a song named "Untitled" on their phones. Upon playing it, they are transported to the Stage SEKAI. There they meet Hatsune Miku and Kagamine Rin, 
+                who perform as idols in the Stage SEKAI. <br>
+                Miku and Rin brought the girls over to see their performance. However the performance left Airi and Haruka in a bad mood of reminiscing about the past. Seeing Miku and Rin perform 
+                while glow sticks cheered for them made Airi upset and jealous that she never got the chance to perform in that kind of show. During the performance, the glow sticks turned blue, 
+                which was the same sight Haruka saw of a sea of blue glow sticks cheering for her in her solo show. But now that she left idol hood, she wouldn't be able to see that precious sight again. <br>
+                The next day, Airi and Shizuku talked about Airi’s experience in the idol industry which made her quit. Shizuku tried consoling and giving hope to Airi but Airi, bitter over her past, 
+                inadvertently echoed hurtful judgments Shizuku endured from everyone,  breaking Shizuku’s heart hearing that from the person she admired. <br><br>
+                Airi and Shizuku met when they were starting their idol careers. Though they were from different groups but in the same agency, Airi was the one who encouraged and gave hope to Shizuku 
+                to keep trying to become better idols for their fans. Shizuku was always favoured for her looks. She got more opportunities than her group mates and even became the lead of the group. 
+                In the beginning her teammates were patient, helpful and kind towards her but after seeing the favouritism towards Shizuku, they turned their backs and started hating, insulting, bullying 
+                and isolating Shizuku out of jealousy and unfairness. Everyone only saw Shizuku for her looks, not what she does or who she is as a person. She had to keep up the image of “perfect Shizuku” 
+                to not disappoint the fans and centred her life on meeting people's expectations. Airi’s words were the last straw for Shizuku to keep going on as an idol, which led her to leave her group, Cheerful Days. 
+                Filled with guilt of the news that Shizuku left her group, Airi ran to Cheerful Days to apologise to Shizuku and tried to convince Cheerful Days to take back Shizuku. The group told her that Shizuku
+                left the group on her own accord with Shizuku confirming it. <br><br>
+                Minori later suggested the idea of forming their own idol group with Airi, Shizuku and Haruka but Haruka declined the offer due to the guilt of ruining her ex teammate’s life, making her believe 
+                she doesn’t have the right to be an idol. 
+                It turns out the reason Haruka quit was due to encouraging her ex idol teammate to keep trying, however the teammate kept working herself to exhaustion which led her to not be able to continue being an idol anymore. 
+                Filled with guilt, Haruka quit being an idol. Minori, Airi and Shizuku went to find Haruka’s ex teammate to know what happened and even found out she had forgiven Haruka and felt guilty for putting the blame on her 
+                in the moment of anger and fear. With that information, the three girls went to tell Haruka. However, even knowing her ex teammate no longer blames her, she still declined joining the group because she became 
+                fearful of going up on stage again. <br><br>
+                Luckily, Minori, Airi, Shizuku and the VIRTUAL SINGERS managed to convince Haruka to return to idol hood, forming MORE MORE JUMP!
+            </p> <br>
+        </article>
+
+        <article>
+            <h1 class="heading">First song:</h1>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/le_p8QLy9Mk?si=scqYbka75MpJUwkM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <p class = info>
+                Their first song is “Idol Shin'eitai”. It is a commissioned song by Mitchie M. The song features Hatsune Miku, 
+                Hanasato Minori, Kiritani Haruka, Momoi Airi and Hinomori Shizuku. It was released on 30/09/2020.
+            </p>
+        </article><br>
+
+        <article>
+            <h1 class="heading">Extra information(in-game terms):</h1>
+            <h2 class="heading">Stage SEKAI:</h2>
+                <p class="info">The Stage SEKAI is a world of stages illuminated by countless glowsticks where the VIRTUAL SINGERs perform. 
+                    The Stage SEKAI was created from the girls' dreams and the determination of becoming an idol. There are a vast amount of stages, 
+                    and it is unknown how far the stages go on for.
+                </p> <br> 
+
+            <h2 class="heading">VIRTUAL SINGERS:</h2>
+                <p class="info">They are a group consisting of vocaloids. Vocaloid is a software program that uses pre-recorded vocal samples from voice actors 
+                or singers(voicebanks) to generate synthesized singing based on inputted lyrics and melody information. VIRTUAL SINGERS live in SEKAIs, 
+                with different appearances in each SEKAI and help people discover their true feelings. They play a minor role in the story, supporting 
+                the main casts in their journey. The vocaloids featured in the game are Hatsune Miku, Kagamine Rin, Kagamine Len, Megurine Luka, MEIKO and KAITO. 
+                Other vocaloids like GUMI, vflower, KAFU are sometimes featured in the game through the songs under the VIRTUAL SINGERS tag but they do not 
+                have in-game models. 
+                </p> <br> 
+                
+            <h2 class="heading">SEKAI:</h2>
+                <p class="info">SEKAI is another world separate from the real world. SEKAI are built from emotions, and the place where VIRTUAL SINGERS live. 
+                There are many different SEKAIs, each one formed from the feelings of people who are struggling to understand themselves. 
+                When the feelings of a person are realized, they will manifest in the SEKAI through a song. 
+                People can travel to their SEKAI by playing "Untitled" songs. These songs have no melody or lyrics and are created when a SEKAI is born. 
+                </p>
+    </section>
+    <br>
+    <br>
+    <footer>
+        Find out more in the <a href="members.html">Members</a> and <a href="music.html">Music</a> page 
+        or go to the <a href ="https://projectsekai.fandom.com/wiki/MORE_MORE_JUMP!">Project SEKAI MORE MORE JUMP! wiki</a> or 
+        <a href="https://projectsekai.fandom.com/wiki/SEKAI_(location)">Project SEKAI SEKAI wiki</a> 
+        for more information. All rights belongs to SEGA and Colorful Palatte.
+    </footer>
 </body>
 </html>
