--- a/index.html
+++ b/index.html
@@ -3,22 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
-    <title>FED Assignment 1</title>
+    <title>MORE MORE JUMP! Introduction</title>
     <link href="css\normalize.css" rel="stylesheet" type="text/css"/>
     <link href="css\style.css" rel="stylesheet" type="text/css"/>
     <link href="https://fonts.googleapis.com/css2?family=Arima:wght@100..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Oswald:wght@200..700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <img src="images/Moremorejumplogo.webp" alt="More More Jump logo" class="logo">
+        <!-- navigation -->
         <nav>
-            <button class="navigation"><a href="index.html">Home</a></button>
-            <button class="navigation"><a href="history.html">History</a></button>
-            <button class="navigation"><a href="members.html">Members</a></button>
-            <button class="navigation"><a href="music.html">Music</a></button>
+            <button class="navigation"><a href="index.html" id = "home" onclick="onPage(this)">Home</a></button>
+            <button class="navigation"><a href="history.html" id = "history" onclick="onPage(this)">History</a></button>
+            <button class="navigation"><a href="members.html" id = "members" onclick="onPage(this)">Members</a></button>
+            <button class="navigation"><a href="music.html" id = "music" onclick="onPage(this)">Music</a></button>
         </nav>
+        <!-- MMJ logo -->
+        <img src="images/Moremorejumplogo.webp" alt="More More Jump logo" class="logo">
     </header>
 
+    <!-- short introduction to MMJ -->
     <article>
         <h1 class="heading pink">Who is MORE MORE JUMP!:</h1>
         <p class = info>
@@ -27,6 +30,8 @@
             The members are Hanasato Minori, Kiritani Haruka, Momoi Airi, Hinomori Shizuku 
             They are one of the units in the rhythm game, HATSUNE MIKU: COLORFUL STAGE!  
         </p> <br>
+
+        <!-- display a group photo and state the members' names -->
         <h1 class="heading blue">Members:</h1>
         <img src="images/Mmj_Groupv1.webp" alt="MORE MORE JUMP! members" class="members">
         <p class="info">At the back: <b>Hatsune Miku</b>(frequent guest) <br>
@@ -37,31 +42,31 @@
     <section>
         <article>
             <h1 class="heading orange">Group name and logo origins:</h1>
-                <p class="info">The group's name came about from Minori's habit of saying "more, more", 
-                    while "Jump" symbolizes the feeling that everyone is trying to reach for their dream of becoming an idol. <br><br>
+            <p class="info">The group's name came about from Minori's habit of saying "more, more", 
+                while "Jump" symbolizes the feeling that everyone is trying to reach for their dream of becoming an idol. <br><br>
 
-                    Their logo is a 3 leaf clover. It represents how the members don't feel worthy to be called a fully fledged idol yet, 
-                    due to their past experiences and mistakes haunting them. However, despite their setbacks, they never gave up hope on 
-                    working their way to become better idols to inspire and give hope to others. The connections they formed, past experiences 
-                    and mistakes made, positive support and encouragement they provided to one another, as well as from their fans, makes 
-                    their idol journey worthwhile if it means being able to give hope to someone. 
-                </p> <br>
+                Their logo is a 3 leaf clover. It represents how the members don't feel worthy to be called a fully fledged idol yet, 
+                due to their past experiences and mistakes haunting them. However, despite their setbacks, they never gave up hope on 
+                working their way to become better idols to inspire and give hope to others. The connections they formed, past experiences 
+                and mistakes made, positive support and encouragement they provided to one another, as well as from their fans, makes 
+                their idol journey worthwhile if it means being able to give hope to someone. 
+            </p> <br>
         </article>
 
         <article>
             <h1 class="heading green">Goals and Dreams:</h1>
-                <p class="info">
-                They are a freelance idol group that does livestreams to be closer with their fans. They like to interact with their fans 
-                and even hear their suggestions for the next stream or event or outfit. <br><br>
-                Their goal is to spread and inspire hope to as many people as they can. <br><br>
-                
-                After their first solo show, consisting of 700 seats, and hearing how much their fans wish that more people know 
-                about their group, they set their sights to be famous enough to host more shows/events, go on tours and even perform at the Dome, 
-                which holds up to 30,000 people. <br>
+            <p class="info">
+            They are a freelance idol group that does livestreams to be closer with their fans. They like to interact with their fans 
+            and even hear their suggestions for the next stream or event or outfit. <br><br>
+            Their goal is to spread and inspire hope to as many people as they can. <br><br>
+            
+            After their first solo show, consisting of 700 seats, and hearing how much their fans wish that more people know 
+            about their group, they set their sights to be famous enough to host more shows/events, go on tours and even perform at the Dome, 
+            which holds up to 30,000 people. <br>
 
-                They have expanded their activities to major media such as television to increase their publicity, in hopes of achieving 
-                their dream one day. 
-                </p>
+            They have expanded their activities to major media such as television to increase their publicity, in hopes of achieving 
+            their dream one day. 
+            </p>
         </article>
     </section>
     <br>
@@ -72,5 +77,6 @@
         or go to the <a href ="https://projectsekai.fandom.com/wiki/MORE_MORE_JUMP!">Project SEKAI wiki</a>, fandom website, 
         for more information. All images used are offical and the rights belongs to SEGA and Colorful Palatte.
     </footer>
+    <script src="javascript\script.js"></script>
 </body>
 </html>
