Updated the comments

--- a/music.html
+++ b/music.html
@@ -21,7 +21,7 @@
 
     <h1 class="heading">Commissioned Songs:</h1>
 
-    <!-- dropdown menu for each characters or the group or all focus songs -->
+    <!-- dropdown menu to filter for each member's or the group's focus songs -->
     <h3 class="heading">Filter Songs</h3>
     <label for="filter-select" class="info">Whose focus songs are you interested in:</label>
     <select class="info" id="filter-select" onchange="filterResults()">
@@ -33,7 +33,7 @@
       <option value="group">Group</option>
     </select>
 
-    <!-- list of songs, title color-coded according to the focus character -->
+    <!-- list of songs, title is color-coded according to the focus member -->
     <section class="song-list">
         <div class="flex-song-item group item">
             <div class="flex-song-img">
